--- a/demo-ebean/pom.xml
+++ b/demo-ebean/pom.xml
@@ -29,7 +29,11 @@
 			<artifactId>ebean-querybean</artifactId>
 			<version>11.20.1</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
+		<dependency>
+			<groupId>io.ebean</groupId>
+			<artifactId>ebean-elastic</artifactId>
+			<version>11.18.1</version>
+		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
@@ -61,7 +65,12 @@
 			<version>1.18.4</version>
 			<scope>provided</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
