--- a/vaadin/beverage-flow-ebean-javaee/pom.xml
+++ b/vaadin/beverage-flow-ebean-javaee/pom.xml
@@ -21,13 +21,19 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
 
-        <ebean.version>11.39.1</ebean.version>
-        <ebean-maven-plugin.args>debug=0</ebean-maven-plugin.args>
+        <ebean.version>11.41.1</ebean.version>
+        <ebean-maven-plugin.args>debug=1</ebean-maven-plugin.args>
 
-        <vaadin.version>14.0.0.rc1</vaadin.version>
+        <vaadin.version>14.0.0.rc3</vaadin.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-cdi</artifactId>
+            <version>11.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>io.ebean</groupId>
             <artifactId>ebean</artifactId>
